# async_sbdp_dmpc

./: LICENSE  README.md
DistributedExecution/: CMakeLists.txt
DistributedExecution/src/: Agent.cpp  Agent.hpp  messages.lcm  simulator.cpp  simulator.hpp
DistributedExecution/src/messages/: control.hpp  plantState.hpp  trajectory.hpp
EstimateConstants/: estimate_constants.m
EstimateConstants/central/: central_constraints.m  central_objective.m  check_controllability.m  dynamics.m  integral_cost_function.m  solve_central_ocp.m
EstimateConstants/distributed/: local_constraints.m  local_objective.m  solve_distributed_ocp.m  solve_local_ocp.m
